--- a/styles/main.css
+++ b/styles/main.css
@@ -11,7 +11,7 @@
 }
 
 body {
-    position: fixed;
+    /* position: fixed; */
     top: 0;
     left: 0;
     right: 0;
@@ -172,4 +172,37 @@ nav .profile-link a {
     color: var(--color-white);
     background-color: var(--color-primary);
 }
+.blog-posts-container .post-container {
+    display: inline-block;
+    padding-left: 10px;
+    max-width: 30%;
+    margin-bottom: 50px;
+}
+.blog-posts-container .post-container img{
+    width: 50%;
+}
+
+.blog-posts-container .post-container p{
+    font-family: 'Roboto mono', monospace;
+    margin-bottom: 35px;
+}
+
+.blog-posts-container .post-container p:nth-child(2){
+    font-weight: bold;
+    color: var(--color-primary);
+    font-size: larger;
+}
+
+footer{
+    width: 100%;
+    height: 120px;
+    background-color: var(--color-black);
+    border-top: 35px solid var(--color-primary);
+    text-align: center;
+}
+footer p{
+    color: var(--color-white);
+    margin-top: 30px;
+}
+
 
